Se agregan dependencias faltantes en el notebook de signals and systems

--- a/src/S2_signals_and_systems/signals_and_systems.ipynb
+++ b/src/S2_signals_and_systems/signals_and_systems.ipynb
@@ -21,9 +21,17 @@
    "source": [
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
+    "import plotly.offline\n",
     "from plotly.subplots import make_subplots\n",
     "import sympy as sp\n",
-    "from sympy import symbols, exp, sin, cos, pi, I, Heaviside, lambdify, integrate, sqrt"
+    "from sympy import symbols, exp, sin, cos, pi, I, Heaviside, lambdify, integrate, sqrt\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "##Workaround para mostrar fórmulas de LaTeX en Plotly\n",
+    "plotly.offline.init_notebook_mode()\n",
+    "display(HTML(\n",
+    "    '<script type=\"text/javascript\" async src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_SVG\"></script>'\n",
+    "))"
    ]
   },
   {
@@ -47,14 +55,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Solución:\n",
-    "# a) Señal discreta\n",
-    "\n",
-    "# b) Señal continua simbólica\n",
-    "\n",
-    "# c) Graficación de ambas"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -75,12 +76,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Solución:\n",
-    "# a) Definir x(t) y y(t)\n",
-    "\n",
-    "# b) Graficar ambas señales"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -100,15 +96,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Solución:\n",
-    "# a) Señal continua cos(t)\n",
-    "\n",
-    "# b) Versión discreta cos(n)\n",
-    "\n",
-    "# c) Stem plot de la señal discreta\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -382,7 +370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "signal_processing_venv (3.11.2)",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
